Added Node dependency lockfile (#11)

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ node_modules
 ~*
 _/*
 !scss/**/_*
-package-lock.json
+#package-lock.json
 .DS_store
 
 # specifically ignore most of dist, except the files needed for GitHub pages
