added version to dist CSS build

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "echo \"Deprecated: Use `npm run dist`\" && npm-run-all dist",
     "DISABLED_serve": "browser-sync start --server --files [\"dist/css/*.css\", \"dist/js/*.ts\", \"examples/*.*\", \"*.html\"]",
     "serve": "browser-sync start --server",
-    "css": "npm-run-all css-wipe css-compile css-prefix css-minify",
+    "css": "npm-run-all css-wipe css-compile css-prefix css-minify css-version",
     "css-wipe": "rimraf ./dist/css",
     "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --load-path=node_modules/bootstrap/scss scss/:dist/css/",
     "css-prefix": "postcss --config build/postcss.config.js --replace \"dist/css/*.css\" \"!dist/css/*.rtl*.css\" \"!dist/css/*.min.css\"",
@@ -23,6 +23,7 @@
     "css-minify-dark": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-dark.min.css dist/css/bootstrap-dark.css",
     "css-minify-unlit": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-unlit.min.css dist/css/bootstrap-unlit.css",
     "css-minify-blackbox": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-blackbox.min.css dist/css/bootstrap-blackbox.css",
+    "css-version": "replace-in-file --configFile=build/replace-in-file.config.js",
     "css-lint": "npm-run-all --continue-on-error --parallel css-lint-*",
     "css-lint-stylelint": "stylelint \"**/*.scss\" --cache --cache-location .cache/.stylelintcache --rd",
     "css-lint-vars": "fusv scss/",
@@ -99,6 +100,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.8",
     "postcss-cli": "^8.3.1",
+    "replace-in-file": "^6.2.0",
     "rimraf": "^3.0.2",
     "sass": "^1.32.6",
     "stylelint": "^13.12.0",
