--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-dark-5",
-  "version": "0.1.3",
+  "version": "1.0.0",
   "description": "The Ancillary Guide to Dark Mode and Bootstrap 5 - A continuation of the v4 Dark Mode POC",
   "main": "",
   "scripts": {
@@ -84,8 +84,8 @@
   ],
   "devDependencies": {
     "@popperjs/core": "^2.9.2",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "autoprefixer": "^10.2.5",
     "browser-sync": "^2.26.14",
     "clean-css-cli": "^5.3.0",
@@ -98,7 +98,7 @@
     "find-unused-sass-variables": "^3.1.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.13",
+    "postcss": "^8.2.14",
     "postcss-cli": "^8.3.1",
     "replace-in-file": "^6.2.0",
     "rimraf": "^3.0.2",
@@ -109,6 +109,6 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "bootstrap": "5.0.0-beta3"
+    "bootstrap": "5.0.0"
   }
 }
