--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-dark-5",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "The Ancillary Guide to Dark Mode and Bootstrap 5 - A continuation of the v4 Dark Mode POC",
   "main": "",
   "scripts": {
@@ -109,6 +109,6 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "bootstrap": "5.0.0"
+    "bootstrap": "^5.0.1"
   }
 }
