--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "serve": "browser-sync start --server",
     "css": "npm-run-all css-wipe css-compile css-prefix css-minify css-version",
     "css-wipe": "rimraf ./dist/css",
-    "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --load-path=node_modules/bootstrap/scss scss/:dist/css/",
+    "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --load-path=node_modules/bootstrap/scss scss/:dist/css/ --quiet",
     "css-prefix": "postcss --config build/postcss.config.js --replace \"dist/css/*.css\" \"!dist/css/*.rtl*.css\" \"!dist/css/*.min.css\"",
     "css-minify": "npm-run-all --parallel css-minify-*",
     "css-minify-main": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap.min.css dist/css/bootstrap.css",
@@ -102,7 +102,7 @@
     "postcss-cli": "^8.3.1",
     "replace-in-file": "^6.2.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.32.13",
+    "sass": "^1.33.0",
     "stylelint": "^13.13.1",
     "stylelint-config-twbs-bootstrap": "^2.2.0",
     "terser": "^5.6.1",
