--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-dark-5",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "The Ancillary Guide to Dark Mode and Bootstrap 5 - A continuation of the v4 Dark Mode POC",
   "main": "",
   "scripts": {
@@ -13,7 +13,7 @@
     "serve": "browser-sync start --server",
     "css": "npm-run-all css-wipe css-compile css-prefix css-minify css-version",
     "css-wipe": "rimraf ./dist/css",
-    "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --load-path=node_modules/bootstrap/scss scss/:dist/css/ --quiet",
+    "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --load-path=node_modules/bootstrap/scss scss/:dist/css/",
     "css-prefix": "postcss --config build/postcss.config.js --replace \"dist/css/*.css\" \"!dist/css/*.rtl*.css\" \"!dist/css/*.min.css\"",
     "css-minify": "npm-run-all --parallel css-minify-*",
     "css-minify-main": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap.min.css dist/css/bootstrap.css",
@@ -37,7 +37,7 @@
     "watch-js-main": "nodemon --watch js/src/ --ext ts --exec \"npm-run-all js-lint js-compile js-minify docs-js-* && browser-sync reload\"",
     "watch-examples": "nodemon --watch examples/ --ext html --exec \"browser-sync reload\"",
     "watch-root": "nodemon --watch . --ext html --exec \"browser-sync reload\"",
-    "docs": "npm-run-all --parallel docs-js-*",
+    "BROKEN_docs": "npm-run-all --parallel docs-*",  "docs": "",
     "docs-js-darkmode": "documentation build js/src/darkmode.ts --parse-extension ts -f md -o docs/darkmode.js.md --markdown-toc true --shallow false",
     "map-dark-vars": "npm-run-all --parallel map-dark-vars-*",
     "map-dark-vars-alt-to-core": "node ./build/make-dark-map.js ./build/dark-map-list.json '-alt' '' > ./scss/dark/_variables-map-alt-to-core.scss",
@@ -84,21 +84,21 @@
   ],
   "devDependencies": {
     "@popperjs/core": "^2.9.2",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "autoprefixer": "^10.2.6",
     "browser-sync": "^2.26.14",
     "clean-css-cli": "^5.3.0",
     "cross-env": "^7.0.3",
     "documentation": "^13.2.5",
-    "eslint": "^7.28.0",
+    "eslint": "^7.29.0",
     "eslint-config-xo": "^0.37.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-unicorn": "^33.0.1",
     "find-unused-sass-variables": "^3.1.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.3.4",
+    "postcss": "^8.3.5",
     "postcss-cli": "^8.3.1",
     "replace-in-file": "^6.2.0",
     "rimraf": "^3.0.2",
@@ -106,9 +106,11 @@
     "stylelint": "^13.13.1",
     "stylelint-config-twbs-bootstrap": "^2.2.1",
     "terser": "^5.6.1",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.4",
+    "unherit": "^2.0.0",
+    "x-is-string": "^0.1.0"
   },
   "dependencies": {
-    "bootstrap": "^5.0.1"
+    "bootstrap": "^5.0.2"
   }
 }
