workaround for documentation not working on windows

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "watch-js-main": "nodemon --watch js/src/ --ext ts --exec \"npm-run-all js-lint js-compile js-minify docs-js-* && browser-sync reload\"",
     "watch-examples": "nodemon --watch examples/ --ext html --exec \"browser-sync reload\"",
     "watch-root": "nodemon --watch . --ext html --exec \"browser-sync reload\"",
-    "BROKEN_docs": "npm-run-all --parallel docs-*",  "docs": "",
+    "docs": "run-script-os",
+    "docs:darwin:linux": "npm-run-all --parallel docs-*",
+    "docs:windows:": "echo \"Sorry: documentation tool does not work on Windows :(\"",
     "docs-js-darkmode": "documentation build js/src/darkmode.ts --parse-extension ts -f md -o docs/darkmode.js.md --markdown-toc true --shallow false",
     "map-dark-vars": "npm-run-all --parallel map-dark-vars-*",
     "map-dark-vars-alt-to-core": "node ./build/make-dark-map.js ./build/dark-map-list.json '-alt' '' > ./scss/dark/_variables-map-alt-to-core.scss",
@@ -102,6 +104,7 @@
     "postcss-cli": "^8.3.1",
     "replace-in-file": "^6.2.0",
     "rimraf": "^3.0.2",
+    "run-script-os": "^1.1.6",
     "sass": "^1.35.1",
     "stylelint": "^13.13.1",
     "stylelint-config-twbs-bootstrap": "^2.2.1",
