--- a/package.json
+++ b/package.json
@@ -85,8 +85,8 @@
     "prefers-color-scheme"
   ],
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "autoprefixer": "^10.2.6",
     "browser-sync": "^2.27.4",
     "clean-css-cli": "^5.3.0",
@@ -104,7 +104,7 @@
     "replace-in-file": "^6.2.0",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
-    "sass": "^1.35.1",
+    "sass": "^1.35.2",
     "stylelint": "^13.13.1",
     "stylelint-config-twbs-bootstrap": "^2.2.1",
     "terser": "^5.7.1",
@@ -113,7 +113,9 @@
     "x-is-string": "^0.1.0"
   },
   "dependencies": {
-    "@popperjs/core": "^2.9.2",
-    "bootstrap": "^5.0.2"
+    "bootstrap": "~5.0.2"
+  },
+  "peerDependencies": {
+    "@popperjs/core": "^2.9.2"
   }
 }
