--- a/package.json
+++ b/package.json
@@ -85,8 +85,8 @@
     "prefers-color-scheme"
   ],
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
     "autoprefixer": "^10.3.1",
     "browser-sync": "^2.27.5",
     "clean-css-cli": "^5.3.2",
@@ -95,7 +95,7 @@
     "eslint": "^7.32.0",
     "eslint-config-xo": "^0.37.0",
     "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-unicorn": "^34.0.1",
+    "eslint-plugin-unicorn": "^35.0.0",
     "find-unused-sass-variables": "^3.1.0",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
@@ -104,7 +104,7 @@
     "replace-in-file": "^6.2.0",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
-    "sass": "^1.37.0",
+    "sass": "^1.37.5",
     "stylelint": "^13.13.1",
     "stylelint-config-twbs-bootstrap": "^2.2.3",
     "terser": "^5.7.1",
@@ -113,9 +113,9 @@
     "x-is-string": "^0.1.0"
   },
   "dependencies": {
-    "bootstrap": "~5.0.2"
+    "bootstrap": "^5.1.0"
   },
   "peerDependencies": {
-    "@popperjs/core": "^2.9.2"
+    "@popperjs/core": "^2.9.3"
   }
 }
