--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-minify-unlit": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-unlit.min.css dist/css/bootstrap-unlit.css",
     "css-minify-blackbox": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-blackbox.min.css dist/css/bootstrap-blackbox.css",
     "css-minify-colors": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-colors.min.css dist/css/bootstrap-colors.css",
+    "css-minify-plugin": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-dark-plugin.min.css dist/css/bootstrap-dark-plugin.css",
     "css-version": "replace-in-file --configFile=build/replace-in-file.config.js",
     "css-lint": "npm-run-all --continue-on-error --parallel css-lint-*",
     "css-lint-stylelint": "stylelint \"**/*.scss\" --cache --cache-location .cache/.stylelintcache --rd",
@@ -85,38 +86,38 @@
     "color-scheme",
     "prefers-color-scheme"
   ],
+  "dependencies": {
+    "bootstrap": "^5.1.1"
+  },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "@typescript-eslint/parser": "^4.30.0",
-    "autoprefixer": "^10.3.3",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "autoprefixer": "^10.3.6",
     "browser-sync": "^2.27.5",
-    "clean-css-cli": "^5.3.3",
+    "clean-css-cli": "^5.4.1",
     "cross-env": "^7.0.3",
     "documentation": "^13.2.5",
     "eslint": "^7.32.0",
-    "eslint-config-xo": "^0.38.0",
+    "eslint-config-xo": "^0.39.0",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-unicorn": "^35.0.0",
+    "eslint-plugin-unicorn": "^36.0.0",
     "find-unused-sass-variables": "^3.1.0",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.13",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.3.6",
-    "postcss-cli": "^8.3.1",
+    "postcss": "^8.3.8",
+    "postcss-cli": "^9.0.1",
     "replace-in-file": "^6.2.0",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
-    "sass": "^1.38.2",
+    "sass": "^1.42.1",
     "stylelint": "^13.13.1",
-    "stylelint-config-twbs-bootstrap": "^2.2.3",
-    "terser": "^5.7.2",
-    "typescript": "^4.4.2",
+    "stylelint-config-twbs-bootstrap": "^2.2.4",
+    "terser": "^5.9.0",
+    "typescript": "^4.4.3",
     "unherit": "^3.0.0",
     "x-is-string": "^0.1.0"
   },
-  "dependencies": {
-    "bootstrap": "^5.1.0"
-  },
   "peerDependencies": {
-    "@popperjs/core": "^2.9.3"
+    "@popperjs/core": "^2.10.2"
   }
 }
