--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "prefers-color-scheme"
   ],
   "dependencies": {
-    "bootstrap": "^5.1.2"
+    "bootstrap": "^5.1.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -97,7 +97,7 @@
     "clean-css-cli": "^5.4.1",
     "cross-env": "^7.0.3",
     "documentation": "^13.2.5",
-    "eslint": "^7.32.0",
+    "eslint": "~7.32",
     "eslint-config-xo": "^0.39.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-unicorn": "^36.0.0",
