--- a/package.json
+++ b/package.json
@@ -90,17 +90,17 @@
     "bootstrap": "^5.1.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "autoprefixer": "^10.3.7",
     "browser-sync": "^2.27.5",
     "clean-css-cli": "^5.4.1",
     "cross-env": "^7.0.3",
     "documentation": "^13.2.5",
-    "eslint": "~7.32",
+    "eslint": "^8.0.0",
     "eslint-config-xo": "^0.39.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-unicorn": "^36.0.0",
+    "eslint-plugin-import": "^2.25.1",
+    "eslint-plugin-unicorn": "^37.0.1",
     "find-unused-sass-variables": "^3.1.0",
     "nodemon": "^2.0.13",
     "npm-run-all": "^4.1.5",
