--- a/package.json
+++ b/package.json
@@ -90,27 +90,27 @@
     "bootstrap": "^5.1.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
     "autoprefixer": "^10.3.7",
     "browser-sync": "^2.27.5",
-    "clean-css-cli": "^5.4.1",
+    "clean-css-cli": "^5.4.2",
     "cross-env": "^7.0.3",
     "documentation": "^13.2.5",
-    "eslint": "^8.0.1",
+    "eslint": "^8.1.0",
     "eslint-config-xo": "^0.39.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-unicorn": "^37.0.1",
     "find-unused-sass-variables": "^3.1.0",
-    "nodemon": "^2.0.13",
+    "nodemon": "^2.0.14",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.3.9",
+    "postcss": "^8.3.11",
     "postcss-cli": "^9.0.1",
-    "replace-in-file": "^6.2.0",
+    "replace-in-file": "^6.3.2",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
-    "sass": "^1.43.2",
-    "stylelint": "^13.13.1",
+    "sass": "^1.43.3",
+    "stylelint": "~13.13.1",
     "stylelint-config-twbs-bootstrap": "^2.2.4",
     "terser": "^5.9.0",
     "typescript": "^4.4.4",
