--- a/package.json
+++ b/package.json
@@ -90,8 +90,8 @@
     "bootstrap": "^5.1.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
     "autoprefixer": "^10.4.0",
     "browser-sync": "^2.27.7",
     "clean-css-cli": "^5.5.0",
@@ -104,16 +104,17 @@
     "find-unused-sass-variables": "^3.1.0",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.4",
+    "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
     "replace-in-file": "^6.3.2",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
     "sass": "^1.45.0",
-    "stylelint": "~13.13.1",
-    "stylelint-config-twbs-bootstrap": "^2.2.4",
+    "stylelint": "^14.1.0",
+    "stylelint-scss": "^4.0.1",
+    "stylelint-config-twbs-bootstrap": "^3.0.0",
     "terser": "^5.10.0",
-    "typescript": "^4.5.3",
+    "typescript": "^4.5.4",
     "unherit": "^3.0.0",
     "x-is-string": "^0.1.0"
   },
