--- a/package.json
+++ b/package.json
@@ -87,38 +87,37 @@
     "prefers-color-scheme"
   ],
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "bootstrap": "~5.1.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "autoprefixer": "^10.4.4",
-    "browser-sync": "^2.27.9",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "autoprefixer": "10.4.5",
+    "browser-sync": "^2.27.10",
     "clean-css-cli": "^5.6.0",
     "cross-env": "^7.0.3",
     "documentation": "^13.2.5",
-    "eslint": "^8.12.0",
-    "eslint-config-xo": "^0.40.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint": "^8.16.0",
+    "eslint-config-xo": "^0.41.0",
     "eslint-plugin-unicorn": "^42.0.0",
-    "find-unused-sass-variables": "^4.0.3",
-    "nodemon": "^2.0.15",
+    "find-unused-sass-variables": "^4.0.4",
+    "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.14",
     "postcss-cli": "^9.1.0",
     "replace-in-file": "^6.3.2",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
-    "sass": "^1.49.11",
-    "stylelint": "^14.6.1",
-    "stylelint-scss": "^4.2.0",
+    "sass": "^1.52.1",
+    "stylelint": "^14.8.3",
     "stylelint-config-twbs-bootstrap": "^3.0.1",
-    "terser": "^5.12.1",
-    "typescript": "^4.6.3",
+    "stylelint-scss": "^4.2.0",
+    "terser": "^5.13.1",
+    "typescript": "^4.6.4",
     "unherit": "^3.0.0",
     "x-is-string": "^0.1.0"
   },
   "peerDependencies": {
-    "@popperjs/core": "^2.11.4"
+    "@popperjs/core": "^2.11.5"
   }
 }
