--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-dark-5",
-  "version": "1.1.3",
+  "version": "1.2.0-beta1",
   "description": "The Ancillary Guide to Dark Mode and Bootstrap 5 - A continuation of the v4 Dark Mode POC",
   "main": "",
   "scripts": {
@@ -9,7 +9,7 @@
     "lint": "npm-run-all --parallel css-lint js-lint",
     "dist": "npm-run-all --parallel css js docs",
     "build": "echo \"Deprecated: Use `npm run dist`\" && npm-run-all dist",
-    "DISABLED_serve": "browser-sync start --server --files [\"dist/css/*.css\", \"dist/js/*.ts\", \"examples/*.*\", \"*.html\"]",
+    "DISABLED___serve": "browser-sync start --server --files [\"dist/css/*.css\", \"dist/js/*.ts\", \"examples/*.*\", \"*.html\"]",
     "serve": "browser-sync start --server",
     "css": "npm-run-all css-wipe css-compile css-prefix css-minify css-version",
     "css-wipe": "rimraf ./dist/css",
@@ -17,12 +17,12 @@
     "css-prefix": "postcss --config build/postcss.config.js --replace \"dist/css/*.css\" \"!dist/css/*.rtl*.css\" \"!dist/css/*.min.css\"",
     "css-minify": "npm-run-all --parallel css-minify-*",
     "css-minify-main": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap.min.css dist/css/bootstrap.css",
-    "css-minify-night": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-night.min.css dist/css/bootstrap-night.css",
-    "css-minify-nightfall": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-nightfall.min.css dist/css/bootstrap-nightfall.css",
-    "css-minify-nightshade": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-nightshade.min.css dist/css/bootstrap-nightshade.css",
+    "DISABLED___css-minify-night": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-night.min.css dist/css/bootstrap-night.css",
+    "DISABLED___css-minify-nightfall": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-nightfall.min.css dist/css/bootstrap-nightfall.css",
+    "DISABLED___css-minify-nightshade": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-nightshade.min.css dist/css/bootstrap-nightshade.css",
     "css-minify-dark": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-dark.min.css dist/css/bootstrap-dark.css",
-    "css-minify-unlit": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-unlit.min.css dist/css/bootstrap-unlit.css",
-    "css-minify-blackbox": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-blackbox.min.css dist/css/bootstrap-blackbox.css",
+    "DISABLED___css-minify-unlit": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-unlit.min.css dist/css/bootstrap-unlit.css",
+    "DISABLED___css-minify-blackbox": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-blackbox.min.css dist/css/bootstrap-blackbox.css",
     "css-minify-colors": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-colors.min.css dist/css/bootstrap-colors.css",
     "css-minify-plugin": "cleancss -O1 --format breakWith=lf --output dist/css/bootstrap-dark-plugin.min.css dist/css/bootstrap-dark-plugin.css",
     "css-version": "replace-in-file --configFile=build/replace-in-file.config.js",
@@ -43,10 +43,10 @@
     "docs:darwin:linux": "npm-run-all --parallel docs-*",
     "docs:windows:": "echo \"Sorry: documentation tool does not work on Windows :(\"",
     "docs-js-darkmode": "documentation build js/src/darkmode.ts --parse-extension ts -f md -o docs/darkmode.js.md --markdown-toc true --shallow false",
-    "map-dark-vars": "npm-run-all --parallel map-dark-vars-*",
-    "map-dark-vars-alt-to-core": "node ./build/make-dark-map.js ./build/dark-map-list.json '-alt' '' > ./scss/dark/_variables-map-alt-to-core.scss",
-    "map-dark-vars-core-to-temp": "node ./build/make-dark-map.js ./build/dark-map-list.json '' '-temp-dnu' > ./scss/dark/_variables-map-core-to-temp.scss",
-    "map-dark-vars-temp-to-alt": "node ./build/make-dark-map.js ./build/dark-map-list.json '-temp-dnu' '-alt' > ./scss/dark/_variables-map-temp-to-alt.scss",
+    "DISABLED___map-dark-vars": "npm-run-all --parallel map-dark-vars-*",
+    "DISABLED___map-dark-vars-alt-to-core": "node ./build/make-dark-map.js ./build/dark-map-list.json '-alt' '' > ./scss/dark/_variables-map-alt-to-core.scss",
+    "DISABLED___map-dark-vars-core-to-temp": "node ./build/make-dark-map.js ./build/dark-map-list.json '' '-temp-dnu' > ./scss/dark/_variables-map-core-to-temp.scss",
+    "DISABLED___map-dark-vars-temp-to-alt": "node ./build/make-dark-map.js ./build/dark-map-list.json '-temp-dnu' '-alt' > ./scss/dark/_variables-map-temp-to-alt.scss",
     "bump": "echo \"Use bump-major, bump-minor, bump-patch\" && echo \"\" && exit 0",
     "bump-major": "npm version major",
     "bump-minor": "npm version minor",
