update ignores + fix $text-muted-alt error

--- a/.gitignore
+++ b/.gitignore
@@ -6,43 +6,10 @@ _/*
 #package-lock.json
 .DS_store
 
-# specifically ignore most of dist, except the files needed for GitHub pages
-# (yes... maps with be broken, but not needed on GitHub)
+# don't GitHub the min's and TS typescript type information files (`.d`)
 
-#dist/css/bootstrap.css
-#dist/css/bootstrap.css.map
-dist/css/bootstrap.min.css
+dist/css/**.min.**
 
-#dist/css/bootstrap-dark.css
-#dist/css/bootstrap-dark.css.map
-dist/css/bootstrap-dark.min.css
-
-#dist/js/darkmode.js
-#dist/js/darkmode.js.map
-dist/js/darkmode.d.ts
-dist/js/darkmode.d.ts.map
-dist/js/darkmode.min.js
-
-#dist/css/bootstrap-night.css
-#dist/css/bootstrap-night.css.map
-dist/css/bootstrap-night.min.css
-
-#dist/css/bootstrap-nightshade.css
-#dist/css/bootstrap-nightshade.css.map
-dist/css/bootstrap-nightshade.min.css
-
-#dist/css/bootstrap-nightfall.css
-#dist/css/bootstrap-nightfall.css.map
-dist/css/bootstrap-nightfall.min.css
-
-#dist/css/bootstrap-unlit.css
-#dist/css/bootstrap-unlit.css.map
-dist/css/bootstrap-unlit.min.css
-
-#dist/css/bootstrap-blackbox.css
-#dist/css/bootstrap-blackbox.css.map
-dist/css/bootstrap-blackbox.min.css
-
-#dist/css/bootstrap-colors.css
-#dist/css/bootstrap-colors.css.map
-dist/css/bootstrap-colors.min.css
+dist/js/*.d.ts
+dist/js/*.d.ts.map
+dist/js/**.min.**
